--- a/SistemaDiscusiones/templates/base.html
+++ b/SistemaDiscusiones/templates/base.html
@@ -21,6 +21,8 @@
                 <ul class="nav navbar-nav">
                     <li><a href="#">Ayuda</a></li>
                 </ul>
+                {% block profile %}
+                {% endblock %}
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
